src/objects/RMA_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_ID__c</fullName>
        <formula>Account__r.Billing_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle_End_Date__c</fullName>
        <label>Billing Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle_Start_Date__c</fullName>
        <label>Billing Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <formula>TEXT(Account__r.Billing_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Account__r.Billing_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emailed_On__c</fullName>
        <label>Emailed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Report</label>
        <referenceTo>appirio_pse_exp__Expense_Report__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice_URL_ELLUCIAN__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;ReportId=00O30000003sgk7&quot; + 
&quot;&amp;TemplateId=a0Ea000000GktIU&quot; + 
&quot;&amp;OFN=&quot; + Account__r.Name + &quot;-&quot; + Name + 
&quot;&amp;QMode=3&quot; + 
&quot;&amp;fp0=1&quot;+
&quot;&amp;MFTS0=Emailed_On__c &quot;+ 
&quot;&amp;MFTSValue0=Today&quot; + 
&quot;&amp;LG4=1&quot;+ 
&quot;&amp;EmailTemplateId=00X30000001SoeJ&quot;+ 
&quot;&amp;EmailToId=&quot; + Billing_Contact_ID__c+ 
&quot;&amp;EmailBCC=&quot;+ Other_Billing_Contacts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Invoice URL ELLUCIAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice_URL__c</fullName>
        <description>&quot;&amp;QMode=3&quot; is for auto email also need email2 id (contact id)&amp;
email template id

&quot;&amp;MFTS0=Emailed_On__c &quot;+
&quot;&amp;MFTSValue0=Today&quot; +
&quot;&amp;LG4=1&quot;+
&quot;&amp;EmailTemplateId=00X30000001SoeJ&quot;+
&quot;&amp;EmailToId=&quot; +  Billing_Contact_ID__c</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;ReportId=00O30000003sgk7&quot; +
&quot;&amp;TemplateId=a0E3000000DmlE8&quot; +
&quot;&amp;OFN=&quot; + Account__r.Name  + &quot;-&quot; +  Name + 
&quot;&amp;QMode=3&quot; +
&quot;&amp;fp0=1&quot;+
&quot;&amp;MFTS0=Emailed_On__c &quot;+
&quot;&amp;MFTSValue0=Today&quot; +
&quot;&amp;LG4=1&quot;+
&quot;&amp;EmailTemplateId= 00X30000001SoeJ&quot;+
&quot;&amp;EmailToId=&quot; +  Billing_Contact_ID__c+
&quot;&amp;EmailBCC=&quot;+ Other_Billing_Contacts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Invoice URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice_URL_for_Accountant__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;ReportId=00O30000003sgk7&quot; + 
&quot;&amp;TemplateId=a1F30000000VZmz&quot; + 
&quot;&amp;OFN=&quot; + Account__r.Name + &quot;-&quot; + Name + 
&quot;&amp;QMode=1&quot; + 
&quot;&amp;fp0=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Invoice URL for Accountant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceURL__c</fullName>
        <formula>SUBSTITUTE(LEFT($Api.Enterprise_Server_URL_180, FIND(&quot;salesforce.com&quot;, $Api.Enterprise_Server_URL_180)-1), &quot;-api&quot;, &quot;&quot;)+&apos;salesforce.com/&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InstanceURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <summarizedField>Invoice_Line_Item__c.Line_Item_Charge__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Invoiced__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_Hidden__c</fullName>
        <description>Used in email template</description>
        <label>Invoice Number Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Billing_Contacts__c</fullName>
        <formula>IF(Account__r.Additional_Billing_Contact__c  &lt;&gt; null,

Account__r.Additional_Billing_Contact_Email__c&amp;&quot;,&quot;&amp; Account__r.Additional_Billing_Contact_Email_2__c &amp;&quot;,&quot;&amp;  Account__r.Additional_Billing_Contact4_Email__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Billing Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Appirio_PSAe__Proj__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TOTAL_INVOICE__c</fullName>
        <formula>Invoice_Amount__c + Total_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL INVOICE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 15</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>Invoice_Line_Item__c.Hours__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Un_invoiced_Line_Item__c</fullName>
        <label>Un-invoiced Line Item</label>
        <summarizedField>Invoice_Line_Item__c.Line_Item_Charge__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Invoiced__c</field>
            <operation>notEqual</operation>
            <value>Invoiced</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_Performed__c</fullName>
        <label>Work Performed</label>
        <picklist>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding/Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Total__c</columns>
        <columns>Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Invoices_4_16</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Terms__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>4/16/2010</value>
        </filters>
        <label>Invoices 4.16</label>
        <sharedTo>
            <role>VPSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoices_for_410</fullName>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Terms__c</columns>
        <columns>Work_Performed__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>NAME</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>4/8/2010</value>
        </filters>
        <label>Invoices for 410</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Emailed_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month&apos;s Invoices</label>
    </listViews>
    <listViews>
        <fullName>Last_Week_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Emailed_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week&apos;s Invoices</label>
    </listViews>
    <listViews>
        <fullName>Next_Week_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Terms__c</columns>
        <columns>Emailed_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>rainmaker</value>
        </filters>
        <label>Next Week&apos;s Invoices</label>
    </listViews>
    <listViews>
        <fullName>Other_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>5/17/2012</value>
        </filters>
        <label>Other Invoices</label>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s Invoices</label>
    </listViews>
    <listViews>
        <fullName>This_Week_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Notes__c</columns>
        <columns>Terms__c</columns>
        <columns>Emailed_On__c</columns>
        <columns>Billing_Contact_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week&apos;s Invoices</label>
    </listViews>
    <listViews>
        <fullName>This_Week_s_Invoices_RMA_TEST</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Terms__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>rainmaker</value>
        </filters>
        <label>This Week&apos;s Invoices RMA TEST</label>
    </listViews>
    <listViews>
        <fullName>This_Year_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>This Year&apos;s Invoices</label>
    </listViews>
    <nameField>
        <displayFormat>Rainmaker Invoice-{00000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>